--- a/index.html
+++ b/index.html
@@ -207,21 +207,13 @@ I have full right to work in UK.</p>
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Thank you for reviewing my portfolio. I’d be happy to share more – get in touch!</p>
-									<form method="post" action="https://formspree.io/f/xjkvqejp">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
+									<p>Thank you for reviewing my portfolio. I’d be happy to share more – get in touch!<br>
+										<ul class="icons">
+											
+											<li><a href="mailto:dhanashreenangre@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a>  dhanashreenangre@gmail.com</li><br>
+											<li><a href="https://www.linkedin.com/in/dhanashree-nangre/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a> https://www.linkedin.com/in/dhanashree-nangre/</li>
+					
+										</ul>
 								</div>
 							</section>
 
